--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/SimonChapman/.pyenv/versions/gc-3.8/bin/python"
+    "python.pythonPath": "/Users/SimonChapman/.pyenv/versions/rcpchgrowth-python/bin/python"
 }
