--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-attrs           20.3.0
-iniconfig       1.1.1
-marshmallow     3.11.1
-numpy           1.20.2
-packaging       20.9
-pip             21.1
-pluggy          0.13.1
-py              1.10.0
-pyparsing       2.4.7
-pytest          6.2.3
-python-dateutil 2.8.1
-scipy           1.6.2
-setuptools      41.2.0
-six             1.15.0
-toml            0.10.2
+attrs==20.3.0
+click==7.1.2
+iniconfig==1.1.1
+marshmallow==3.11.1
+numpy==1.20.2
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.3
+python-dateutil==2.8.1
+scipy==1.6.2
+six==1.15.0
+toml==0.10.2
