--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine pytest
+        pip3 install -r requirements.txt
+        pip3 install setuptools wheel twine
     - name: Test with Pytest
       run: |
         pytest
