--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,3 +2,6 @@
 current_version = 2.2.0
 tag = False
 commit = True
+[bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
