--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,7 +43,8 @@ jobs:
 
     - name: Initiate repository event in rcpch_server
       run: |
-        curl -X POST https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
+        curl -XPOST  \
         -H 'Accept: application/vnd.github.v3+json' \
-        -u ${{ secrets.SERVER_ACCESS_TOKEN }} \
+        -u "${{ secrets.PAT_USERNAME}}:${{secrets.SERVER_ACCESS_TOKEN }}" \
+        -H "Content-Type: application/json" https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
         -d '{"event_type":"publish_to_pypi"}'
