--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,9 +42,13 @@ jobs:
         sleep 15m
 
     - name: Initiate repository event in rcpch_server
-      run: |
-        curl -XPOST  \
-        -H 'Accept: application/vnd.github.v3+json' \
-        -u ${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}} \
-        -H "Content-Type: application/json" https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
-        --data '{"event_type":"publish_to_pypi"}'
+      uses: peter-evans/repository-dispatch@v1
+      with: 
+        token: ${{secrets.PAT_TOKEN}}
+        event_type: publish_to_pypi
+      # run: |
+      #   curl -XPOST  \
+      #   -H 'Accept: application/vnd.github.v3+json' \
+      #   -u ${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}} \
+      #   -H "Content-Type: application/json" https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
+      #   --data '{"event_type":"publish_to_pypi"}'
