--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,9 +42,12 @@ jobs:
         sleep 15m
 
     - name: Initiate repository event in rcpch_server
+      env: 
+        TOKEN: ${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}
       run: |
-        curl -XPOST  \
-        -H 'Accept: application/vnd.github.v3+json' \
-        -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" \
-        -H "Content-Type: application/json" https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
-        --data '{"event_type":"publish_to_pypi"}'
+        curl 
+          -X POST https://api.github.com/repos/rcpch/digital-growth-charts-server/dispatches \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Content-Type: application/json" \
+          -u "$TOKEN" \
+          --data '{"event_type":"publish_to_pypi"}'
