--- a/.github/workflows/run-pytest-on-push-and-all-prs.yml
+++ b/.github/workflows/run-pytest-on-push-and-all-prs.yml
@@ -17,7 +17,7 @@ jobs:
     # Runs tests on multiple python versions across the range we support
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v4
