--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-attrs==20.3.0
-bump2version==1.0.1
-iniconfig==1.1.1
-packaging==20.9
-pluggy==0.13.1
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.3
-python-dateutil==2.8.1
-scipy
-six==1.15.0
-toml==0.10.2
+attrs
+bump2version
+iniconfig
 matplotlib
+packaging
+pluggy
+py
+pyparsing
+pytest
+python-dateutil
+scipy
+six
+toml
