adds tty, stdin_open, and the correct launch command to d-c.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,7 @@ services:
     build: .
     volumes:
       - .:/app
-    command:
+    tty: true  # Allocate a pseudo-TTY
+    stdin_open: true  # Keep stdin open
+    command: |
+      cd app; pytest
