removes the requirements/development-requirements.txt pattern in favour of straight requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-# delegates to requirements/live-requirements.txt
--r requirements/development-requirements.txt
+bump2version
+pytest
+python-dateutil
+scipy
+matplotlib
+setuptools
