--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 # NOTE The below is the Docker Compose specification version NOT the Python version:
-version: '3.8'
+version: "3.8"
 
 services:
   rcpchgrowth-python:
     build: .
     volumes:
       - .:/app
-    tty: true  # Allocate a pseudo-TTY
-    stdin_open: true  # Keep stdin open
+    working_dir: /app
+    tty: true # Allocate a pseudo-TTY
+    stdin_open: true # Keep stdin open
     command: |
-      cd app; pytest
+      pytest
